# bamojax

./: .gitattributes  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  Citation.cff  LICENSE  MANIFEST.in  README.md  environment.yml  gen_api_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  draft-pdf.yml  publish.yml  test.yml
SUMMARY/: index.html
api/: index.html
api/bamojax._version/: index.html
api/bamojax.base/: index.html
api/bamojax.gwishart.gwishart/: index.html
api/bamojax.inference/: index.html
api/bamojax.marginal_likelihoods/: index.html
api/bamojax.marginal_likelihoods.bridge_sampling/: index.html
api/bamojax.marginal_likelihoods.importance_sampling/: index.html
api/bamojax.marginal_likelihoods.laplace/: index.html
api/bamojax.marginal_likelihoods.naive_monte_carlo/: index.html
api/bamojax.marginal_likelihoods.thames/: index.html
api/bamojax.marginal_likelihoods.utility/: index.html
api/bamojax.modified_blackjax.modified_adaptive_tempered/: index.html
api/bamojax.modified_blackjax.modified_elliptical_slice_nd/: index.html
api/bamojax.modified_blackjax.modified_tempered/: index.html
api/bamojax.modified_blackjax.more_proposals/: index.html
api/bamojax.more_distributions/: index.html
api/bamojax.samplers/: index.html
bamojax/: __init__.py  _version.py  base.py  gradients.py  inference.py  marginal_likelihoods.py  more_distributions.py  samplers.py  sampling.py  todo.md  todo.txt  variational_inference.py
bamojax/examples/bnn/: bnn_mpl.ipynb
bamojax/examples/bnp/: copula_wishart_processes.ipynb  gaussian_process_regression.ipynb  independent_wishart_process_regression.ipynb  sparse_gaussian_process_regression.ipynb  wishart_process_regression.ipynb
bamojax/examples/cognitive_models/: expectance_valence.ipynb  growth_mixture_models.ipynb  variable_selection_mdd.ipynb
bamojax/examples/model_search/: bridge_sampling_bamojax.ipynb  collinearity_and_GGMs.ipynb  reversible_jump_mcmc.ipynb  thames.ipynb
bamojax/examples/system_identification/: lotka_volterra.ipynb
bamojax/examples/timeseries/: AR_models.ipynb
bamojax/examples/toy_examples/: eight_schools.ipynb  gaussian_unknown_mean.ipynb  hierarchical_coinflips.ipynb  linear_regression.ipynb
bamojax/gwishart/: __init__.py  gwishart.py
bamojax/marginal_likelihoods/: bridge_sampling.py  importance_sampling.py  laplace.py  naive_monte_carlo.py  thames.py  utility.py
bamojax/modified_blackjax/: modified_adaptive_tempered.py  modified_elliptical_slice_nd.py  modified_tempered.py  more_proposals.py
docs/: SUMMARY.md  api.md  gen_api_nav.py  index.md
paper/: paper.bib  paper.md
search/: search_index.json
tests/: test_base.py  test_inference.py  test_more_distributions.py
